--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "cookie-parser": "1.3.2",
+    "events": "^1.1.0",
     "express": "^4.13.3",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
