--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/helmutschneider/riksdag-webclient#readme",
   "dependencies": {
+    "angular": "^1.4.7",
     "babel": "^5.8.23",
+    "bootstrap": "^3.3.5",
     "cookie-parser": "1.3.2",
     "events": "^1.1.0",
     "express": "^4.13.3",
